--- a/client/src/style/index.css
+++ b/client/src/style/index.css
@@ -1,9 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,700&display=swap');
-/* styles.css or main.css */
-@import 'tailwindcss/base';
-@import 'tailwindcss/components';
-@import 'tailwindcss/utilities';
-
 body {
   margin: 0;
   font-family: 'Poppins', sans-serif;
@@ -33,6 +28,14 @@ body::-webkit-scrollbar {
 }
 .bg-primary {
   background: #f91944;
+}
+.active {
+  border-radius: 9999px;
+  padding: 0.5rem 1rem;
+  color: rgba(255,255,255,var(--tw-text-opacity));
+}
+.passive {
+  cursor: pointer;
 }
 .bg-primary-dark {
   background: #ce193c;
